# stend_modules

./: .gitignore  CMakeLists.txt
cpp/: CMakeLists.txt  interface.h  opencv.cpp  opencv.lua  simple.cpp  simple.lua
cpp/bcb_6/: demo_bcb_6.bpr  demo_bcb_6.tds  libdemo_bcb_6.tds  main.cpp  run.lua
lua/: canny.lua  combine.lua  combine_quality.lua  dct.lua  morph.lua  simple.lua
pascal/: CMakeLists.txt  simple.lua  simple.pas  stend_delphi.pas  stend_interface.pas
pascal/delphi_6/: demo_delphi_6.dof  demo_delphi_6.dpr  run.lua
